# TrippinOnTubs

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yml
android/: Android.mk  Application.mk  build.sh  nlohmann_Android.mk  update.sh
assets/goggin/: goggin.json
assets/ground/: ground.json
autoplay/: test.json
config/: config.json  test.json  trippin.json
ios/: CMakeLists.txt  Info.plist  build.sh  iosLaunchScreen.storyboard  update.sh
maps/: level1.json  level2.json  level_1.json  level_2.json  level_3.json  level_4.json  level_5.json  level_6.json  level_7.json  level_8.json  load.json  loading.json  map.json  map_ground_melt.json  map_int.json  map_load.json  map_minimal.json  map_test.json  map_train.json  map_training.json  test.json  training.json  training_charged_duck_jump.json  training_charged_jump.json  training_double_jump.json  training_duck.json  training_jump.json  training_jump_slam_down.json
server/: lambda_function.py  logger_lambda_function.py  notification_lambda_function.py
site/: deploy.sh  highscores.html  index.html  privacy.html  scores.html  support.html
sprites/all_time/: all_time.json
sprites/alpha/: alpha.json
sprites/alpha_small/: alpha_small.json
sprites/ball/: ball.json
sprites/bird/: bird.json
sprites/brick/: brick.json
sprites/building1/: building1.json
sprites/building2/: building2.json
sprites/building3/: building3.json
sprites/building5/: building5.json
sprites/building6/: building6.json
sprites/charged_duck_jump/: charged_duck_jump.json
sprites/charged_duck_jump_arc/: charged_duck_jump_arc.json
sprites/charged_duck_jump_controls/: charged_duck_jump_controls.json
sprites/charged_jump/: charged_jump.json
sprites/charged_jump_arc/: charged_jump_arc.json
sprites/charged_jump_controls/: charged_jump_controls.json
sprites/chicken/: chicken.json
sprites/clock_timer/: clock_timer.json
sprites/cloud/: cloud.json
sprites/cloud_dark/: cloud_dark.json
sprites/combo/: combo.json
sprites/digits/: digits.json
sprites/double_jump/: double_jump.json
sprites/double_jump_arc/: double_jump_arc.json
sprites/double_jump_controls/: double_jump_controls.json
sprites/dust/: dust.json
src/: CMakeLists.txt  arena.cpp  enclosed.cpp  frogs.cpp  gameloop.cpp  gameloop.h  goggin.cpp  main.cpp  mice.cpp  sdl.cpp  sdlimg.cpp  test.json  time
src/applications/: Configuration.cpp  Configuration.h  Game.cpp  Game.h  arena.cpp  collisiondebug.cpp  enclosed.cpp  frogs.cpp  gameloop.cpp  goggin.cpp  mice.cpp  tgoggin.cpp  trippin.cpp
src/demo/: FontRenderer.cpp  FontRenderer.h  RenderableObject.cpp  RenderableObject.h  arena.cpp  collisiondebug.cpp  enclosed.cpp  frogs.cpp  gameloop.cpp  gameloop.h  goggin.cpp  mice.cpp  tgoggin.cpp
src/engine/: AbsorbentCollision.cpp  AbsorbentCollision.h  Clock.cpp  Clock.h  ClockStats.h  Collision.h  CollisionTable.cpp  CollisionTable.h  CollisionType.h  Collisions.h  Convert.h  ElasticCollision1D.cpp  ElasticCollision1D.h  ElasticCollision2D.cpp  ElasticCollision2D.h  Engine.cpp  Engine.h  Fraction.h  Grid.cpp  Grid.h  InelasticCollision.cpp  InelasticCollision.h  Listener.cpp  Listener.h  Object.cpp  Object.h  ObjectCollision.cpp  ObjectCollision.h  Optional.h  Partition.cpp  Partition.h  Physics.cpp  Physics.h  PlasmaPhysics.cpp  PlasmaPhysics.h  PlatformCollision.cpp  PlatformCollision.h  Point.h  PriorityQueue.h  Queue.h  (+19 more)
src/exception/: TubsException.cpp  TubsException.h
src/game/: Activation.cpp  Activation.h  AutoPlay.cpp  AutoPlay.h  Ball.cpp  Ball.h  Bird.cpp  Bird.h  ComboManager.cpp  ComboManager.h  Configuration.cpp  Configuration.h  Db.h  DecorativeObject.cpp  DecorativeObject.h  EndMenuOverlay.cpp  EndMenuOverlay.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Goggin.cpp  Goggin.h  GogginInput.h  GogginInputTick.h  GogginRenderer.cpp  GogginRenderer.h  Ground.cpp  Ground.h  GroupManager.cpp  GroupManager.h  Interpolator.cpp  Interpolator.h  Json.h  JumpMeter.cpp  JumpMeter.h  Layer.cpp  Layer.h  Level.cpp  Level.h  (+79 more)
src/graphics/: FontRenderer.cpp  FontRenderer.h  RenderableObject.cpp  RenderableObject.h
src/io/: File.cpp  File.h
src/lock/: AutoGuard.h  Exchange.h  Guarded.h  Lock.h  Mutex.h
src/net/: AddResult.h  Channel.h  DbSynchronizer.cpp  DbSynchronizer.h  LogEvent.h  Logger.cpp  Logger.h  Score.h  StagingArea.cpp  StagingArea.h  Tcp.cpp  Tcp.h  Transport.cpp  Transport.h
src/sdl/: Lib.cpp  Lib.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/sprite/: Camera.cpp  Camera.h  Files.cpp  Files.h  RenderClock.cpp  RenderClock.h  Scale.cpp  Scale.h  Sprite.cpp  Sprite.h  SpriteException.cpp  SpriteException.h  SpriteFiles.h  SpriteLoadTask.cpp  SpriteLoadTask.h  SpriteLoader.cpp  SpriteLoader.h  SpriteManager.cpp  SpriteManager.h  SpriteMetadata.cpp  SpriteMetadata.h  SpriteSheet.cpp  SpriteSheet.h  SpriteType.h  Units.h
src/trippin/: trippin.cpp
src/ui/: DigitLayout.h  EndMenu.cpp  EndMenu.h  ExitOverlay.cpp  ExitOverlay.h  GameOverOverlay.cpp  GameOverOverlay.h  Interpolator.cpp  Interpolator.h  LevelOverlay.cpp  LevelOverlay.h  Marquee.cpp  Marquee.h  MenuLayout.h  NameForm.cpp  NameForm.h  ScoreBoard.cpp  ScoreBoard.h  ScoreMenu.cpp  ScoreMenu.h  ScrollingScoreBoard.cpp  ScrollingScoreBoard.h  SimpleOverlay.cpp  SimpleOverlay.h  SpeedUpOverlay.cpp  SpeedUpOverlay.h  TitleMenu.cpp  TitleMenu.h  TitleOverlay.cpp  TitleOverlay.h
test/: CMakeLists.txt  catch_main.cpp
test/engine/: collision_table_tests.cpp  engine_tests.cpp  grid_tests.cpp  object_tests.cpp  point_tests.cpp  priority_queue_tests.cpp  queue_tests.cpp  rect_tests.cpp  sides_tests.cpp  snap_queue_tests.cpp  vector_tests.cpp
test/game/: configuration_tests.cpp  map_tests.cpp  shake_tests.cpp  sound_manager_tests.cpp
test/net/: channel_tests.cpp  staging_area_tests.cpp
test/sprite/: sprite_manager_tests.cpp  sprite_metadata_tests.cpp  sprite_sheet_tests.cpp  sprite_tests.cpp
tools/: api.py  assets.py  gif.py  map.py  plot.py  sherlock.py  sprite.py  test.py  testcolor.py
(+67 files in other folders)
